# base-client-api

./: .editorconfig  .env  .gitattributes  .gitignore  LICENSE.md  README.adoc  pyproject.toml
.github/: FUNDING.yml
base_client_api/: __init__.py  base_client.py  client.py  exceptions.py  utils.py
base_client_api/models/: __init__.py  base.py  pydantic_cfg.py  record.py  results.py
examples/: config.toml
tests/: __init__.py  test_banner_print.py  test_base_client.py  test_base_client_api.py  test_process_results.py  test_request_debug.py  test_test_print.py  test_utils.py
tests/models/: __init__.py  reqs.py  requests.py
