[tool.poetry]
name = "base-client-api"
version = "2.2.2"
description = "Base Client API; Used to build other client APIs"
authors = ["Jerod Gawne <jerodgawne@gmail.com>"]

[tool.poetry.dependencies]
aiodns = "^2.0.0"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
brotlipy = "^0.7.0"
cchardet = "^2.1.7"
loguru = "^0.5.3"
pydantic = "^1.8.1"
python = "^3.8.0"  # Recommended 3.9+
python-rapidjson = "^1.0"
rich = "^9.13.0"
tenacity = "^7.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
devtools = "^0.6.1"
Pygments = "^2.8.1"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-runner = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
