[tool.poetry]
name = "base-client-api"
version = "2.3.1"
description = "Base Client API; Used to build other client APIs"
authors = ["Jerod Gawne <jerodgawne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"

aiodns = "^2.0.0"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
aiohttp-pydantic = "^1.9.0"
brotlipy = "^0.7.0"
cchardet = "^2.1.7"
loguru = "^0.5.3"
pydantic = "^1.8.1"
python-rapidjson = "^1.0"
rich = "^10.1.0"
tenacity = "^7.0.0"
toml = "^0.10.2"
uvloop = "^0.15.2"


[tool.poetry.dev-dependencies]
devtools = "^0.6.1"
Pygments = "^2.8.1"
pytest = "^6.2.2"
pytest-aiohttp = "^0.3.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.11.1"
pytest-runner = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
